fix for cropping multi-note thumbnails

--- a/sass/components/content/_multi-note.scss
+++ b/sass/components/content/_multi-note.scss
@@ -1,9 +1,8 @@
 .multi-note-thumbnail {
-  max-width: 60px;
-  max-height: 60px;
-  width: 60px;
-  height: 60px;
+  width: 100px;
+  height: 100px;
   cursor: pointer;
+  object-fit: cover;
 }
 
 .multi-note-image {
